fixed z-index bug

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@
     top: 0px;
     right: 0px;
     left: 0px;
+  z-index: 10;
 }
 
 #nav-bar .logo {
